--- a/src/web/static/style.css
+++ b/src/web/static/style.css
@@ -1,5 +1,5 @@
 html {
-  font-family: sans-serif;
+  font-family: 'Source Code Pro', monospace;
   background: #eee;
   padding: 1rem;
 }
@@ -7,17 +7,20 @@ html {
 body {
   max-width: 960px;
   margin: 0 auto;
-  background: white;
+}
+
+h1 {
+  font-size: 1.7em;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: serif;
   color: #377ba8;
   margin: 1rem 0;
 }
 
 a {
   color: #377ba8;
+  text-decoration: none;
 }
 
 hr {
@@ -26,13 +29,13 @@ hr {
 }
 
 nav {
-  background: lightgray;
   display: flex;
   align-items: center;
   padding: 0 0.5rem;
 }
 
 nav h1 {
+  font-size: 1.2em;
   flex: auto;
   margin: 0;
 }
@@ -51,7 +54,7 @@ nav ul  {
 
 nav ul li a, nav ul li span, header .action {
   display: block;
-  padding: 0.5rem;
+  padding: 0.8rem;
 }
 
 .content {
@@ -131,4 +134,8 @@ input.danger {
 input[type=submit] {
   align-self: start;
   min-width: 10em;
+}
+
+#cabin-icon {
+  margin: 3px 12px 3px 8px;
 }
